project3/examples/4/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginxdemo-hello
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: nginxdemo-hello
